# eng-telecom-workbook

./: .gitignore  .gitmodules  README.md  makefile  model.typ  requirements.txt  test.ipynb
.devcontainer/: devcontainer.json
COM1/animations/: Sin-FM-modulation.m
COM1/classes/: class3.m  class5-1.m  class6.m
COM1/homework3/: homework.m  homework.typ
COM1/homework4/: homework.m  homework.typ  homeworkSin.m
COM1/modulation-IQ/: 1.m  IQ-modulation.m
COM1/modulation-PCM/: NRZ.m  NRZ1.m  PCM1.m
COM1/modulationAM/: AM-DBS.M
COM1/scripts/: class1.m  class3.m  class4.m  class5-2.m  class6.m
DLP1/auxcodes/: bin2bcd.vhd  contador_modulo_n.vhd  demo.vhd  firstChallange.vhd  flip_flop.vhd  genericCounter.vhd  gray2bin.vhd  leading_zeros.vhd  secondChallange.vhd
DLP1/fsm1/: wave.do
DLP1/project1/: clock.vhd  div_clk.vhd  tb_bcd2ssd.vhd  wave.do
DLP2/homework1/: firstHomework.vhd
DLP2/project1/: bcd2ssd.vhd  main.typ  projec1.vhd  project.typ  tb.do
ELA2/: finalproject.sch
EST/: runner.sh
EST/classes/: L2_E1_P1.cpp  L2_E1_P3.cpp  L2_E23.cpp  L3_E24_P1.cpp  L3_E24_P2.cpp  L3_E24_P3.cpp  L3_E51.cpp  L3_E52_P1.cpp  dado1.cpp
EST/src/: archiveReader.cpp  main.cpp
MIC/classes/: README.md
MTG/: homework1.typ
POO/class-01/: Exercicio01.java  Exercicio04.java  Exercicio05.java  Exercicio06.java  ExercicioTeste.java  NameChange2.java
POO/class-05/: settings.gradle
POO/class-06/: ArchiveProcess.java  InputProcess.java
POO/class-08/: settings.gradle
POO/class-09/: CarAtributes.txt  settings.gradle
POO/class-14/: settings.gradle
POO/class-16/: settings.gradle
POO/class-17/: settings.gradle
POO/class-18/: settings.gradle
POO/class-19/: settings.gradle
POO/class-21/: contatos.txt  saida.txt  settings.gradle
POO/class-22/: settings.gradle
POO/exerciseList01/: CalculaMedia.java  exercise01.java  exercise02.java  exercise03.java  exercise03v2.java  exercise03v3.java  exercise04.java  exercise05.java  exercise05v2.java  teste.txt
PRE/classes/: beta_distribution.m  class3.m  urnProblem.m
SIN1/classes/: class5.m  class7.m  class9.m
SIN1/finalproject/: finalproject.m
SOP/classes/: class2.c
SOP/exercise1/: jantarFilosofos.c  jantarFilosofosSaleiro.c  leitorEscritor.c
semester-3/PRG2/deque/: CMakeLists.txt
semester-3/PRG2/deque/src/: fila_circular_impl.h  main.cpp  main.h  tipos.h  tipos_impl.h
semester-5/EST/finalproject/: CMakeLists.txt
semester-5/EST/finalproject/src/: archiveReader.h  main.h
semester-8/PTC/class2/: CMakeLists.txt  README.md  main.cpp
semester-8/PTC/project1/: .gitignore  CMakeLists.txt
semester-8/PTC/project1/app/: main.cpp  main.h  requisition.cpp  requisition.h
(+746 files in other folders)
